Reinitialize. 重写论文，已完成intro.

--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -1,4 +1,76 @@
+background
+@article{feistel1973cryptography,
+  title={Cryptography and computer privacy},
+  author={Feistel, Horst},
+  journal={Scientific american},
+  volume={228},
+  number={5},
+  pages={15--23},
+  year={1973},
+  publisher={JSTOR}
+}
+
+@online{wiki_encryptographic,
+    url={https://en.wikipedia.org/wiki/Cryptographic_hash_function},
+    citedate={June 02, 2020},
+    title={Cryptographic hash function},
+    year={2020}
+}
+
+@online{apktool,
+    title={Apktool},
+    url={https://github.com/iBotPeaches/Apktool},
+    citedate={June 02, 2020}
+}
+
+@online{dex2jar,
+    title={dex2jar},
+    url={https://github.com/pxb1988/dex2jar},
+    citedate={June 02, 2020}
+}
+
+@online{jd-gui,
+    title={jd-gui},
+    url={https://github.com/java-decompiler/jd-gui},
+    citedate={June 02, 2020}
+}
+
+@online{android_fundamental,
+    title={Android fundamentals},
+    url={https://developer.android.com/guide/components/fundamentals},
+    citedate={June 02, 2020}
+}
+
+@inproceedings{au2012pscout,
+  title={Pscout: analyzing the android permission specification},
+  author={Au, Kathy Wain Yee and Zhou, Yi Fan and Huang, Zhen and Lie, David},
+  booktitle={Proceedings of the 2012 ACM conference on Computer and communications security},
+  pages={217--228},
+  year={2012}
+}
+
+@newspaper{zhang2015xiaomi,
+    title={小米等应用商店藏不良软件 APP市场乱象频生},
+    editor={张倩},
+    publisher={通信信息报},
+    date={2015-02-11(A05)}
+}
+
+@newspaper{chen2012yidong,
+    title={移动应用市场乱象何时休},
+    editor={陈静 and 谭辛},
+    publisher={经济日报},
+    date={2012-02-27(014)}
+}
+
 % ranking frauds related content starts from here
+@inproceedings{lim2010detecting,
+  title={Detecting product review spammers using rating behaviors},
+  author={Lim, Ee-Peng and Nguyen, Viet-An and Jindal, Nitin and Liu, Bing and Lauw, Hady Wirawan},
+  booktitle={Proceedings of the 19th ACM international conference on Information and knowledge management},
+  pages={939--948},
+  year={2010}
+}
 
 @INPROCEEDINGS{hernandez2019the,
 	author = {Hernandez, Nestor and Rahman, Mizanur and Recabarren, Ruben and Ahmed, Ishtiaque and Carbunar, Bogdan},
@@ -88,7 +160,114 @@
   organization={Springer}
 }
 
-% comment understanding
+# repackaging
+@inproceedings{potharaju2012plagiarizing,
+  title={Plagiarizing smartphone applications: attack strategies and defense techniques},
+  author={Potharaju, Rahul and Newell, Andrew and Nita-Rotaru, Cristina and Zhang, Xiangyu},
+  booktitle={International symposium on engineering secure software and systems},
+  pages={106--120},
+  year={2012},
+  organization={Springer}
+}
+
+@inproceedings{hanna2012juxtapp,
+  title={Juxtapp: A scalable system for detecting code reuse among android applications},
+  author={Hanna, Steve and Huang, Ling and Wu, Edward and Li, Saung and Chen, Charles and Song, Dawn},
+  booktitle={International Conference on Detection of Intrusions and Malware, and Vulnerability Assessment},
+  pages={62--81},
+  year={2012},
+  organization={Springer}
+}
+
+@inproceedings{guan2016semantics,
+  title={Semantics-based repackaging detection for mobile apps},
+  author={Guan, Quanlong and Huang, Heqing and Luo, Weiqi and Zhu, Sencun},
+  booktitle={International Symposium on Engineering Secure Software and Systems},
+  pages={89--105},
+  year={2016},
+  organization={Springer}
+}
+
+@article{wu2015detect,
+  title={Detect repackaged android application based on http traffic similarity},
+  author={Wu, Xueping and Zhang, Dafang and Su, Xin and Li, WenWei},
+  journal={Security and Communication Networks},
+  volume={8},
+  number={13},
+  pages={2257--2266},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{sun2015droideagle,
+  title={DroidEagle: seamless detection of visually similar Android apps},
+  author={Sun, Mingshen and Li, Mengmeng and Lui, John CS},
+  booktitle={Proceedings of the 8th ACM Conference on Security \& Privacy in Wireless and Mobile Networks},
+  pages={1--12},
+  year={2015}
+}
+
+@inproceedings{kywe2014detecting,
+  title={Detecting camouflaged applications on mobile application markets},
+  author={Kywe, Su Mon and Li, Yingjiu and Deng, Robert H and Hong, Jason},
+  booktitle={International Conference on Information Security and Cryptology},
+  pages={241--254},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{soh2015detecting,
+  title={Detecting clones in android applications through analyzing user interfaces},
+  author={Soh, Charlie and Tan, Hee Beng Kuan and Arnatovich, Yauhen Leanidavich and Wang, Lipo},
+  booktitle={2015 IEEE 23rd international conference on program comprehension},
+  pages={163--173},
+  year={2015},
+  organization={IEEE}
+}
+
+# against repackaging
+@inproceedings{zhou2013appink,
+  title={AppInk: watermarking android apps for repackaging deterrence},
+  author={Zhou, Wu and Zhang, Xinwen and Jiang, Xuxian},
+  booktitle={Proceedings of the 8th ACM SIGSAC symposium on Information, computer and communications security},
+  pages={1--12},
+  year={2013}
+}
+
+@inproceedings{zhou2014divilar,
+  title={Divilar: Diversifying intermediate language for anti-repackaging on android platform},
+  author={Zhou, Wu and Wang, Zhi and Zhou, Yajin and Jiang, Xuxian},
+  booktitle={Proceedings of the 4th ACM conference on Data and application security and privacy},
+  pages={199--210},
+  year={2014}
+}
+
+@inproceedings{luo2016repackage,
+  title={Repackage-proofing android apps},
+  author={Luo, Lannan and Fu, Yu and Wu, Dinghao and Zhu, Sencun and Liu, Peng},
+  booktitle={2016 46th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
+  pages={550--561},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{zeng2018resilient,
+  title={Resilient decentralized Android application repackaging detection using logic bombs},
+  author={Zeng, Qiang and Luo, Lannan and Qian, Zhiyun and Du, Xiaojiang and Li, Zhoujun},
+  booktitle={Proceedings of the 2018 International Symposium on Code Generation and Optimization},
+  pages={50--61},
+  year={2018}
+}
+
+# repackage dataset
+@article{li2017androzoo++,
+  title={Androzoo++: Collecting millions of android apps and their metadata for the research community},
+  author={Li, Li and Gao, Jun and Hurier, M{\'e}d{\'e}ric and Kong, Pingfan and Bissyand{\'e}, Tegawend{\'e} F and Bartel, Alexandre and Klein, Jacques and Traon, Yves Le},
+  journal={arXiv preprint arXiv:1709.05281},
+  year={2017}
+}
+
+# comment understanding
 @inproceedings{fu2013people,
   title={Why people hate your app: Making sense of user feedback in a mobile app store},
   author={Fu, Bin and Lin, Jialiu and Li, Lei and Faloutsos, Christos and Hong, Jason and Sadeh, Norman},
@@ -105,14 +284,48 @@
   year={2015}
 }
 
-% Edwin
-@inproceedings{tang2019large,
-  title={A large-scale empirical study on industrial fake apps},
-  author={Tang, Chongbin and Chen, Sen and Fan, Lingling and Xu, Lihua and Liu, Yang and Tang, Zhushou and Dou, Liang},
-  booktitle={2019 IEEE/ACM 41st International Conference on Software Engineering: Software Engineering in Practice (ICSE-SEIP)},
-  pages={183--192},
-  year={2019},
-  organization={IEEE}
+# malware
+@inproceedings{felt2011android,
+  title={Android permissions demystified},
+  author={Felt, Adrienne Porter and Chin, Erika and Hanna, Steve and Song, Dawn and Wagner, David},
+  booktitle={Proceedings of the 18th ACM conference on Computer and communications security},
+  pages={627--638},
+  year={2011}
+}
+
+@inproceedings{grace2012riskranker,
+  title={Riskranker: scalable and accurate zero-day android malware detection},
+  author={Grace, Michael and Zhou, Yajin and Zhang, Qiang and Zou, Shihong and Jiang, Xuxian},
+  booktitle={Proceedings of the 10th international conference on Mobile systems, applications, and services},
+  pages={281--294},
+  year={2012}
+}
+
+@inproceedings{enck2009lightweight,
+  title={On lightweight mobile phone application certification},
+  author={Enck, William and Ongtang, Machigar and McDaniel, Patrick},
+  booktitle={Proceedings of the 16th ACM conference on Computer and communications security},
+  pages={235--245},
+  year={2009}
+}
+
+@article{enck2014taintdroid,
+  title={TaintDroid: an information-flow tracking system for realtime privacy monitoring on smartphones},
+  author={Enck, William and Gilbert, Peter and Han, Seungyeop and Tendulkar, Vasant and Chun, Byung-Gon and Cox, Landon P and Jung, Jaeyeon and McDaniel, Patrick and Sheth, Anmol N},
+  journal={ACM Transactions on Computer Systems (TOCS)},
+  volume={32},
+  number={2},
+  pages={1--29},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{yan2012droidscope,
+  title={Droidscope: Seamlessly reconstructing the $\{$OS$\}$ and dalvik semantic views for dynamic android malware analysis},
+  author={Yan, Lok Kwong and Yin, Heng},
+  booktitle={Presented as part of the 21st $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 12)},
+  pages={569--584},
+  year={2012}
 }
 
 @article{chen2018automated,
@@ -150,22 +363,6 @@
 	pages={1748--1750},
 	year={2016},
 	organization={ACM}
-}
-
-@inproceedings{chen2018mobile,
-	title={Are mobile banking apps secure? what can be improved?},
-	author={Chen, Sen and Su, Ting and Fan, Lingling and Meng, Guozhu and Xue, Minhui and Liu, Yang and Xu, Lihua},
-	booktitle={Proceedings of the 2018 26th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering},
-	pages={797--802},
-	year={2018},
-	organization={ACM}
-}
-
-@article{chen2018ausera,
-	title={AUSERA: Large-Scale Automated Security Risk Assessment of Global Mobile Banking Apps},
-	author={Chen, Sen and Meng, Guozhu and Su, Ting and Fan, Lingling and Xue, Yinxing and Liu, Yang and Xu, Lihua and Xue, Minhui and Li, Bo and Hao, Shuang},
-	journal={arXiv preprint arXiv:1805.05236},
-	year={2018}
 }
 
 @inproceedings{storydroid,
@@ -212,6 +409,14 @@
 	organization={ACM}
 }
 
+@inproceedings{portokalidis2010paranoid,
+  title={Paranoid Android: versatile protection for smartphones},
+  author={Portokalidis, Georgios and Homburg, Philip and Anagnostakis, Kostas and Bos, Herbert},
+  booktitle={Proceedings of the 26th annual computer security applications conference},
+  pages={347--356},
+  year={2010}
+}
+
 @inproceedings{chen2016stormdroid,
 	title={Stormdroid: A streaminglized machine learning-based system for detecting android malware},
 	author={Chen, Sen and Xue, Minhui and Tang, Zhushou and Xu, Lihua and Zhu, Haojin},
@@ -221,30 +426,55 @@
 	organization={ACM}
 }
 
-@inproceedings{wang2018android,
-  title={Why are android apps removed from google play? a large-scale empirical study},
-  author={Wang, Haoyu and Li, Hao and Li, Li and Guo, Yao and Xu, Guoai},
-  booktitle={2018 IEEE/ACM 15th International Conference on Mining Software Repositories (MSR)},
-  pages={231--242},
-  year={2018},
+@inproceedings{burguera2011crowdroid,
+  title={Crowdroid: behavior-based malware detection system for android},
+  author={Burguera, Iker and Zurutuza, Urko and Nadjm-Tehrani, Simin},
+  booktitle={Proceedings of the 1st ACM workshop on Security and privacy in smartphones and mobile devices},
+  pages={15--26},
+  year={2011}
+}
+
+@inproceedings{wu2012droidmat,
+  title={Droidmat: Android malware detection through manifest and api calls tracing},
+  author={Wu, Dong-Jie and Mao, Ching-Hao and Wei, Te-En and Lee, Hahn-Ming and Wu, Kuo-Ping},
+  booktitle={2012 Seventh Asia Joint Conference on Information Security},
+  pages={62--69},
+  year={2012},
   organization={IEEE}
 }
 
-@article{Andow2016ASO,
-	title={A Study of Grayware on {Google Play}},
-	author={Benjamin Andow and Adwait Nadkarni and Blake Bassett and William Enck and Tao Xie},
-	journal={2016 IEEE Security and Privacy Workshops (SPW)},
-	year={2016},
-	pages={224-233}
+@inproceedings{gascon2013structural,
+  title={Structural detection of android malware using embedded call graphs},
+  author={Gascon, Hugo and Yamaguchi, Fabian and Arp, Daniel and Rieck, Konrad},
+  booktitle={Proceedings of the 2013 ACM workshop on Artificial intelligence and security},
+  pages={45--54},
+  year={2013}
 }
 
+@inproceedings{chakradeo2013mast,
+  title={Mast: Triage for market-scale mobile malware analysis},
+  author={Chakradeo, Saurabh and Reaves, Bradley and Traynor, Patrick and Enck, William},
+  booktitle={Proceedings of the sixth ACM conference on Security and privacy in wireless and mobile networks},
+  pages={13--24},
+  year={2013}
+}
 
-@article{Zhou2012DissectingAM,
-	title={Dissecting {Android} Malware: Characterization and Evolution},
-	author={Yajin Zhou and Xuxian Jiang},
-	journal={2012 IEEE Symposium on Security and Privacy},
-	year={2012},
-	pages={95-109}
+@inproceedings{aafer2013droidapiminer,
+  title={Droidapiminer: Mining api-level features for robust malware detection in android},
+  author={Aafer, Yousra and Du, Wenliang and Yin, Heng},
+  booktitle={International conference on security and privacy in communication systems},
+  pages={86--103},
+  year={2013},
+  organization={Springer}
+}
+
+@inproceedings{arp2014drebin,
+  title={Drebin: Effective and explainable detection of android malware in your pocket.},
+  author={Arp, Daniel and Spreitzenbarth, Michael and Hubner, Malte and Gascon, Hugo and Rieck, Konrad and Siemens, CERT},
+  booktitle={Ndss},
+  volume={14},
+  pages={23--26},
+  year={2014}
 }
 
 @inproceedings{zhou2012hey,
@@ -256,14 +486,6 @@
   pages={50--52},
   year={2012}
 }
-
-@inproceedings{Felt2011ASO,
-	title={A survey of mobile malware in the wild},
-	author={Adrienne Porter Felt and Matthew Finifter and Erika Chin and Steve Hanna and David A. Wagner},
-	booktitle={SPSM@CCS},
-	year={2011}
-}
-
 
 @inproceedings{DroidMOSS,
 	title={Detecting repackaged smartphone applications in third-party android marketplaces},
@@ -451,8 +673,7 @@
 	title = {Mobile Operating System Market Share Worldwide, 2009 - 2020}
 }
 
-% Reports
-
+# Reports
 @online{microtrend_Fake_Apps_Feigning_Legitimacy,
 	author = {Symphony, Luo and Peter, Yan},
 	year = {2014},
@@ -493,8 +714,7 @@
 	title = {Fake mobile apps, a growing threat}
 }
 
-% News
-
+# News
 @online{wannacry_bitcoin_news,
 	author = {Jonas, Borchgrevink},
 	year = {2017},
@@ -549,7 +769,80 @@
   year={2013}
 }
 
+# Empirical Study methodology
+@incollection{easterbrook2008selecting,
+  title={Selecting empirical methods for software engineering research},
+  author={Easterbrook, Steve and Singer, Janice and Storey, Margaret-Anne and Damian, Daniela},
+  booktitle={Guide to advanced empirical software engineering},
+  pages={285--311},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{perry2000empirical,
+  title={Empirical studies of software engineering: a roadmap},
+  author={Perry, Dewayne E and Porter, Adam A and Votta, Lawrence G},
+  booktitle={Proceedings of the conference on The future of Software engineering},
+  pages={345--355},
+  year={2000}
+}
+
+@article{seaman1999qualitative,
+  title={Qualitative methods in empirical studies of software engineering},
+  author={Seaman, Carolyn B.},
+  journal={IEEE Transactions on software engineering},
+  volume={25},
+  number={4},
+  pages={557--572},
+  year={1999},
+  publisher={IEEE}
+}
+
+@article{kitchenham2002preliminary,
+  title={Preliminary guidelines for empirical research in software engineering},
+  author={Kitchenham, Barbara A and Pfleeger, Shari Lawrence and Pickard, Lesley M and Jones, Peter W and Hoaglin, David C. and El Emam, Khaled and Rosenberg, Jarrett},
+  journal={IEEE Transactions on software engineering},
+  volume={28},
+  number={8},
+  pages={721--734},
+  year={2002},
+  publisher={IEEE}
+}
+
 # Empirical studies
+@article{bieman1995reuse,
+  title={Reuse through inheritance: A quantitative study of C++ software},
+  author={Bieman, James M and Zhao, Josephine Xia},
+  journal={ACM SIGSOFT Software Engineering Notes},
+  volume={20},
+  number={SI},
+  pages={47--52},
+  year={1995},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{harrison2000experimental,
+  title={Experimental assessment of the effect of inheritance on the maintainability of object-oriented systems},
+  author={Harrison, Rachel and Counsell, Steve and Nithi, Reuben},
+  journal={Journal of Systems and Software},
+  volume={52},
+  number={2-3},
+  pages={173--179},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{dybaa2008empirical,
+  title={Empirical studies of agile software development: A systematic review},
+  author={Dyb{\aa}, Tore and Dings{\o}yr, Torgeir},
+  journal={Information and software technology},
+  volume={50},
+  number={9-10},
+  pages={833--859},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @inproceedings{manotas2016empirical,
   title={An empirical study of practitioners' perspectives on green software engineering},
   author={Manotas, Irene and Bird, Christian and Zhang, Rui and Shepherd, David and Jaspan, Ciera and Sadowski, Caitlin and Pollock, Lori and Clause, James},
@@ -581,16 +874,7 @@
   publisher={Springer}
 }
 
-@incollection{easterbrook2008selecting,
-  title={Selecting empirical methods for software engineering research},
-  author={Easterbrook, Steve and Singer, Janice and Storey, Margaret-Anne and Damian, Daniela},
-  booktitle={Guide to advanced empirical software engineering},
-  pages={285--311},
-  year={2008},
-  publisher={Springer}
-}
-
-Empirical studies in China
+# Empirical studies in China
 @phdthesis{wu2016ji,
   title={基于开源软件的C++关键语言特性实证研究},
   author={吴迪},
@@ -603,4 +887,83 @@ Empirical studies in China
   author={杨姗媛},
   year={2015},
   school={中央财经大学}
+}
+
+@article{hu2019dating,
+title = "Dating with Scambots: understanding the ecosystem of fraudulent dating applications",
+author = "Yangyu Hu and Haoyu Wang and Yajin Zhou and Yao Guo and Li Li and Bingxuan Luo and Fangren Xu",
+year = "2019",
+doi = "10.1109/TDSC.2019.2908939",
+language = "English",
+journal = "IEEE Transactions on Dependable and Secure Computing",
+issn = "1545-5971",
+publisher = "IEEE, Institute of Electrical and Electronics Engineers",
+}
+
+@inproceedings{tang2019large,
+  title={A large-scale empirical study on industrial fake apps},
+  author={Tang, Chongbin and Chen, Sen and Fan, Lingling and Xu, Lihua and Liu, Yang and Tang, Zhushou and Dou, Liang},
+  booktitle={2019 IEEE/ACM 41st International Conference on Software Engineering: Software Engineering in Practice (ICSE-SEIP)},
+  pages={183--192},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{chen2018mobile,
+	title={Are mobile banking apps secure? what can be improved?},
+	author={Chen, Sen and Su, Ting and Fan, Lingling and Meng, Guozhu and Xue, Minhui and Liu, Yang and Xu, Lihua},
+	booktitle={Proceedings of the 2018 26th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering},
+	pages={797--802},
+	year={2018},
+	organization={ACM}
+}
+
+@article{chen2018ausera,
+	title={AUSERA: Large-Scale Automated Security Risk Assessment of Global Mobile Banking Apps},
+	author={Chen, Sen and Meng, Guozhu and Su, Ting and Fan, Lingling and Xue, Yinxing and Liu, Yang and Xu, Lihua and Xue, Minhui and Li, Bo and Hao, Shuang},
+	journal={arXiv preprint arXiv:1805.05236},
+	year={2018}
+}
+
+@inproceedings{wang2018android,
+  title={Why are android apps removed from google play? a large-scale empirical study},
+  author={Wang, Haoyu and Li, Hao and Li, Li and Guo, Yao and Xu, Guoai},
+  booktitle={2018 IEEE/ACM 15th International Conference on Mining Software Repositories (MSR)},
+  pages={231--242},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{Andow2016ASO,
+	title={A Study of Grayware on {Google Play}},
+	author={Benjamin Andow and Adwait Nadkarni and Blake Bassett and William Enck and Tao Xie},
+	journal={2016 IEEE Security and Privacy Workshops (SPW)},
+	year={2016},
+	pages={224-233}
+}
+
+@article{Zhou2012DissectingAM,
+	title={Dissecting {Android} Malware: Characterization and Evolution},
+	author={Yajin Zhou and Xuxian Jiang},
+	journal={2012 IEEE Symposium on Security and Privacy},
+	year={2012},
+	pages={95-109}
+}
+
+@inproceedings{Felt2011ASO,
+	title={A survey of mobile malware in the wild},
+	author={Adrienne Porter Felt and Matthew Finifter and Erika Chin and Steve Hanna and David A. Wagner},
+	booktitle={SPSM@CCS},
+	year={2011}
+}
+
+@article{khanmohammadi2019empirical,
+  title={Empirical study of android repackaged applications},
+  author={Khanmohammadi, Kobra and Ebrahimi, Neda and Hamou-Lhadj, Abdelwahab and Khoury, Rapha{\"e}l},
+  journal={Empirical Software Engineering},
+  volume={24},
+  number={6},
+  pages={3587--3629},
+  year={2019},
+  publisher={Springer}
 }
