--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -6,22 +6,46 @@
 
 \setlength{\baselineskip}{25pt} % 25磅行距
 
-作为世界上最受欢迎的移动操作系统，Android拥有着庞大而完整的应用生态环境，其中不仅包含着带给人便利的各色良性应用，也包含了不怀好意的恶意应用和意图不明的仿冒应用。
-得益于对恶意应用的充分理解，业界实现了对恶意应用的监控；
-而前期调研结果表示，学术界尚未有针对仿冒应用进行的研究，对仿冒应用的认识匮乏将带来隐患。
+作为世上最受欢迎的移动操作系统，Android拥有庞大的应用生态环境，其中包含各式良性应用，也包含恶意应用、重打包应用和仿冒应用。
+得益于广泛的前人工作，业界对各类恶意、重打包应用有了充分理解，提出了对应检测机制与防护措施；
+而前期调研结果表示，学术界对仿冒应用进行的研究较为匮乏，该认识匮乏很可能带来隐患。
 
-为获得关于仿冒应用的第一手资料，本文采取实证研究的方式，直接从工业界收集数据以分析仿冒应用。
-针对现有爬虫框架不能定向爬取的问题，本文设计实现了仿冒应用收集框架\mytool ，进行了仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
-基于该数据集，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合案例分析，进行了首次基于Android系统仿冒应用的全方位特征解读。
-进一步地，为验证仿冒应用和移动黑灰产的另一个环节---排名欺诈之间是否存在联系，本文收集了仿冒应用在应用市场上的评级和评论，进行了排名欺诈排查。
-针对现有排名欺诈检测方法的不足，本文先后提出两种方法创新性地对所得数据进行检测。
+目前，对仿冒应用的研究面临以下几点问题与挑战：
+（1）未有一个公开可用的大规模仿冒应用数据集可供研究者使用。收集数据时需要同时考虑数据规模、来源多样性与代表性，本身就是一个难点；
+（2）业界对仿冒应用的概念较为模糊，仿冒应用的基本特征尚未明晰，阻碍了后续的检测工作；
+（3）仿冒应用作者的行为特征不明确，无法为业界提供预防或拦截仿冒应用的适当建议。
 
-在数据收集方面，本文使用\mytool 共收集到了近14万个数据条目，其中每个数据条目代表一个应用样本。
-在特征解读方面，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，相关的案例分析更暴露出了仿冒应用开发者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
-这些信息都有助于对仿冒应用进行理解。
-评论分析方面，结合人工复核，本文确认了提出的两种检测方法均有效，亦验证了仿冒应用中存在排名欺诈行为。
+为获得关于仿冒应用的第一手资料，本文采取实证研究的方式，从以下几方面对仿冒应用进行了深入的分析和研究：
+% 针对现有爬虫框架不能定向爬取的问题，本文设计实现了仿冒应用收集框架\mytool ，进行了仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
+% 基于该数据集，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合案例分析，进行了首次基于Android系统仿冒应用的全方位特征解读。
+% 进一步地，为验证仿冒应用和移动黑灰产的另一个环节---排名欺诈之间是否存在联系，本文收集了仿冒应用在应用市场上的评级和评论，进行了排名欺诈排查。
+% 针对现有排名欺诈检测方法的不足，本文先后提出两种方法创新性地对所得数据进行检测。
+%
+% 在数据收集方面，本文使用\mytool 共收集到了近14万个数据条目，其中每个数据条目代表一个应用样本。
+% 在特征解读方面，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，相关的案例分析更暴露出了仿冒应用开发者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
+% 这些信息都有助于对仿冒应用进行理解。
+% 评论分析方面，结合人工复核，本文确认了提出的两种检测方法均有效，亦验证了仿冒应用中存在排名欺诈行为。
+\vspace{-5mm}
+\begin{itemize}
+    \setlength{\itemsep}{1pt}
+    \setlength{\parskip}{0pt}
+    \setlength{\parsep}{0pt}
+    \item \textbf{收集了体量较大的仿冒应用样本集，改善仿冒应用数据稀缺问题。}
+    本研究从多个应用来源入手爬取数据，最终筛选出5万个余个仿冒应用，还一并爬取了36万余条应用评论数据，可为后续工作如应用特征提取、应用行为分析等提供数据支持。
 
-综上，本文分别从仿冒应用特征解读和仿冒应用评论分析两个方面完成了具有创新性的研究。
-本文希望能借助本文提供的数据和分析结果，提供一个面向仿冒应用及其生态的清晰视角。
+    \item \textbf{进行首个针对Android仿冒应用特征分析进行的大规模研究。}
+    基于上述数据集，本研究对仿冒应用进行了多方面解析，提供了仿冒应用的基本特征解读结果，并提供案例分析。
+    分析结果可帮助多个群体抵御仿冒应用威胁。
+
+    \item \textbf{利用元数据对应用开发者进行行为画像。}
+    结合应用收集时获得的元数据，本研究从开发者证书、应用发布时间多个角度对仿冒应用开发者开展了一系列行为画像，该画像反映的行为特征可为应用市场提供监管思路。
+
+    \item \textbf{提出了可行的排名欺诈行为检测方法。}
+    排名欺诈行为与仿冒应用同属于移动应用黑灰产业。为确认排名欺诈行为与仿冒应用之间的关联，本研究提出了一种针对排名欺诈行为的检测方法。该方法可推广至与评论相关的领域中。
+\end{itemize}
+\vspace{-3mm}
+
+综上，依托收集到的大量数据，本研究对仿冒应用进行了全面的分析，并对多方面受众提出了对应的实用建议，对仿冒应用的认识提升和普通用户的安全意识唤起均有积极影响。
+本文的研究成果能对相关研究者有一定启发作用，为后续工作提供数据支持和探索方向。
 
 \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析, 排名欺诈}
