--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -213,45 +213,45 @@ Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密
 此外，本研究还有两个关键问题，一并列举如下：
 
 \begin{itemize}
-    \setlength{\itemsep}{1pt}
-    \setlength{\parskip}{0pt}
-    \setlength{\parsep}{0pt}
+	\setlength{\itemsep}{1pt}
+	      \setlength{\parskip}{0pt}
+	      \setlength{\parsep}{0pt}
 	\item \emph{如何科学地获取针对仿冒应用的数据？} \quad
-	由于仿冒应用数据缺失，本文只能自行收集数据。
-	数据搜集是科研工作中公认的难点，为提供一次全面的研究结果，除了数据需要有一定规模以外，搜集的目标应用也需要具备多样性，此外还必须获得不同应用市场上的数据，增加研究的代表性。
-	为此，如何获得大量真实、有效、全面而有代表性的数据将是本文研究的一个关键点。
+	      由于仿冒应用数据缺失，本文只能自行收集数据。
+	      数据搜集是科研工作中公认的难点，为提供一次全面的研究结果，除了数据需要有一定规模以外，搜集的目标应用也需要具备多样性，此外还必须获得不同应用市场上的数据，增加研究的代表性。
+	      为此，如何获得大量真实、有效、全面而有代表性的数据将是本文研究的一个关键点。
 
 	\item \emph{如何对仿冒应用进行理解？} \quad
-	仿冒应用虽然普遍存在于各大应用市场中，但尚未有研究对其进行分析，无论是应用市场、研究者还是用户，都缺乏对仿冒应用的理解。
-	为能较全面地认识仿冒应用，需要从不同角度对其进行解读。
-	因此，从应用基本属性、应用作者行为等多角度对仿冒应用进行解析，是本文研究的重点之一。
+	      仿冒应用虽然普遍存在于各大应用市场中，但尚未有研究对其进行分析，无论是应用市场、研究者还是用户，都缺乏对仿冒应用的理解。
+	      为能较全面地认识仿冒应用，需要从不同角度对其进行解读。
+	      因此，从应用基本属性、应用作者行为等多角度对仿冒应用进行解析，是本文研究的重点之一。
 
 	\item \emph{仿冒应用的市场反馈如何？} \quad
-	想要较为全面地了解仿冒应用的生态，仅从基本特性分析是不足够的。
-	为拓展对仿冒应用的认识，本文选择从市场反馈角度入手，与其他应用对比，分析仿冒应用是否有排名欺诈行为。
-	这是本文研究的另一重点，也是本文的创新点。
+	      想要较为全面地了解仿冒应用的生态，仅从基本特性分析是不足够的。
+	      为拓展对仿冒应用的认识，本文选择从市场反馈角度入手，与其他应用对比，分析仿冒应用是否有排名欺诈行为。
+	      这是本文研究的另一重点，也是本文的创新点。
 \end{itemize}
 
 \section{本文主要工作}
 为解决上述三个关键问题，本研究完成了如下主要工作：
 
 \begin{itemize}
-    \setlength{\itemsep}{1pt}
-    \setlength{\parskip}{0pt}
-    \setlength{\parsep}{0pt}
+	\setlength{\itemsep}{1pt}
+	      \setlength{\parskip}{0pt}
+	      \setlength{\parsep}{0pt}
 	\item \emph{全面的数据集整理} \quad
-	借助仿冒应用收集框架\mytool，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，并进一步从360手机助手商店中搜集了来自进27万名用户的36万条数据，以供其后的排名欺诈检测使用。
+	      借助仿冒应用收集框架\mytool，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，并进一步从360手机助手商店中搜集了来自进27万名用户的36万条数据，以供其后的排名欺诈检测使用。
 
 	\item \emph{仿冒应用数据画像与现实案例分析} \quad
-	本研究从基本信息与开发者行为两个方向入手，对仿冒引用进行了较为全面的数据画像。
-	然后，本文还从数据集中挑选出了三组数据，进行了三个案例分析，深化在数据画像中得到的领域知识。
+	      本研究从基本信息与开发者行为两个方向入手，对仿冒引用进行了较为全面的数据画像。
+	      然后，本文还从数据集中挑选出了三组数据，进行了三个案例分析，深化在数据画像中得到的领域知识。
 
 	\item \emph{提供实用建议} \quad
-	基于在实证研究中的发现，本文分析了现有应用市场的不足之处，并分别面向普通用户、应用市场和相关从业者提供了实用建议。
+	      基于在实证研究中的发现，本文分析了现有应用市场的不足之处，并分别面向普通用户、应用市场和相关从业者提供了实用建议。
 
 	\item \emph{针对仿冒应用的排名欺诈检测} \quad
-	本研究先利用前文提及的FRAUDAR进行排名欺诈行为检测，但该方法存在一定局限性，未能提供较为良好的结果。
-	因此，本研究提出两个排名欺诈检测方法，分别从评论用户可信度与评论内容相似度出发，以验证仿冒应用与排名欺诈之间是否存在关联，完善对仿冒应用的生态了解。
+	      本研究先利用前文提及的FRAUDAR进行排名欺诈行为检测，但该方法存在一定局限性，未能提供较为良好的结果。
+	      因此，本研究提出两个排名欺诈检测方法，分别从评论用户可信度与评论内容相似度出发，以验证仿冒应用与排名欺诈之间是否存在关联，完善对仿冒应用的生态了解。
 \end{itemize}
 
 % 现有的排名欺诈挖掘工作均具有其各自的局限性，或是对评分数据有连续收集要求，或是要求检测者有已知的排名欺诈群体，并不能直接应用到本研究收集的数据中。
@@ -310,7 +310,7 @@ Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密
 
 \fullref{chp:intro} 主要提供了本文的研究背景、相关工作、本文拟采用的研究方法、拟解决的问题与本文的主要工作。
 
-\fullref{chp:background} 从Android应用的构建流程出发，介绍了Android安全证书机制、应用市场与黑灰产业的关系和移动黑灰产简介。
+\fullref{chp:background} 从软件工程领域的实证研究出发，介绍了实证研究的常用方法和数据收集、验证标准等理论背景，再着眼于本研究的主体——Android应用，介绍了Android安全证书机制和与仿冒应用相关的重打包应用。
 
 \fullref{chp:data_description} 根据研究现状提出了本研究中关注的研究问题，阐述了本研究中数据收集的关注点并对采集到的数据进行概述。
 
