--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -336,6 +336,8 @@
 
 % \input{chapter-fakerevealer}
 % \clearPaperPage
+\input{chapter-dataCollection}
+\clearPaperPage
 
 \input{chapter-discoveries}
 \clearPaperPage
